--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,7 +26,7 @@ jobs:
       - name: Run Sniper
         run: |
           echo "Starting Sniper update..."
-          node sixseven.js
+          node main.js
       
       - name: Check for changes
         id: git-check
