--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -56,6 +56,7 @@ jobs:
             else
               echo "⚠️ $FILE not found"
             fi
+          done
       - name: Update README with Total Emotes
         if: steps.git-check.outputs.changes == 'true'
         run: |
